fix: org.bukkit.event.EventException